# advent-of-code-2025

./: Cargo.toml  LICENSE  Makefile  README.md  lala.txt
input/: d2.txt  d5-minimal-test-1.txt
src/common/: mod.rs
